--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,13 +15,47 @@ body {
   max-width: 640px;
 }
 
-h1 {
-  font-size: 1.4rem;
+.main {
+  animation: drop 1s ease-out;
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+@keyframes drop {
+  from {
+    transform: translateY(-10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+img.logo {
+  width: 70px;
+  margin-bottom: 3rem;
+}
+
+img.dashboard {
+  width: 100%;
+  margin-bottom: 50px;
 }
 
 p {
   margin-bottom: 35px;
   font-size: .8rem;
+}
+
+h1 {
+  font-size: 1.4rem;
+  color: $gray;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  & span {
+    color: $black;
+    font-weight: 700;
+  }
 }
 
 form {
@@ -86,6 +120,11 @@ form {
   }
 }
 
+.copyright {
+  color: $gray;
+  font-size: .6rem;
+}
+
 footer {
   margin-top: 10px;
   .attribution {
@@ -93,29 +132,6 @@ footer {
     a {
       color: $blue;
     }
-  }
-}
-
-.copyright {
-  color: $gray;
-  font-size: .6rem;
-}
-
-img {
-  margin-bottom: 3.5rem;
-}
-
-img.dashboard {
-  width: 100%;
-}
-
-h1 {
-  color: $gray;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  & span {
-    color: $black;
-    font-weight: 700;
   }
 }
 
@@ -136,6 +152,10 @@ h1 {
 
   p {
     font-size: 1em;
+  }
+
+  img.logo {
+    width: 86px;
   }
 
   form ul {
@@ -160,8 +180,7 @@ h1 {
 
 @media screen and (min-width: 1400px) {
   .container {
-    margin-top: 4rem;
+    margin-top: 3.5rem;
   }
 }
-//375px
 
